test/ui/test/name-resolution/exposure/cycle.lushui
use Alpha as Beta
@(public Beta) Alpha: Type = Type
